# bm-inventory

./: Dockerfile.bm-inventory-build  Dockerfile.bm-inventory-deployemnt  Dockerfile.bm-inventory-disconnected  Makefile  README.md  go.mod  go.sum  onprem-environment  setup.cfg  swagger.yaml
assisted_installer_deployment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
client/installer/: installer_client.go  mock_API.go
cmd/: main.go
deploy/ui/: nginx.conf
internal/bminventory/: inventory.go  inventory_test.go
internal/cluster/: cluster.go  common.go  installer_test.go  mock_cluster_api.go
internal/host/: host.go  instructionmanager.go  instructionmanager_test.go  mock_host_api.go  resetcmd.go  resetcmd_test.go  resetting.go
internal/installcfg/: installcfg.go
internal/network/: machine_network_cidr.go  machine_network_cidr_test.go
models/: cluster.go  step_type.go
pkg/job/: job.go  local_job.go  mock_job.go
restapi/: configure_assisted_install.go  embedded_spec.go  mock_InstallerAPI.go
restapi/operations/: assisted_install_api.go
subsystem/: cluster_test.go  host_test.go
tools/: setup.cfg
tools/assisted_installer_deployment.egg-info/: SOURCES.txt
