[metadata]
name = assisted-installer-deployment
author = Eran Cohen
author-email = eranco@redhat.com
home-page = https://github.com/eranco74/bm-inventory.git
summary = Openshift assisted installer deployment tools
license = Apache-2

requires-dist = setuptools


[files]
packages =
    release

[entry_points]
console_scripts =
    clear_deployment = tools.clear_deployment:main
    deploy_assisted_installer = tools.deploy_assisted_installer:main
    deploy_assisted_installer_configmap = tools.deploy_assisted_installer_configmap:main
    deploy_inventory_service = tools.deploy_inventory_service:main
    deploy_mariadb = tools.deploy_mariadb:main
    deploy_namespace = tools.deploy_namespace:main
    deploy_role = tools.deploy_role:main
    deploy_s3 = tools.deploy_s3:main
    deploy_s3_object_expirer = tools.deploy_s3_object_expirer:main
    deploy_scality_configmap = tools.deploy_scality_configmap:main
    deploy_ui = tools.deploy_ui:main

[pep8]
max-line-length=145
